[workspace]
members  = ["programs/*", "primitives", "scripts"]
resolver = "2"

[workspace.package]
authors    = ["NASD Inc."]
license    = "BUSL-1.1"
version    = "0.1.0"
edition    = "2024"
repository = "https://github.com/noble-assets/ism-evm"

[workspace.dependencies]
# Local crates
primitives = { path = "primitives" }
scripts    = { path = "scripts" }

# SP1
sp1-zkvm  = "5.2.4"
sp1-sdk   = "5.2.4"
sp1-build = "5.2.4"

# Helios
helios                = { git = "https://github.com/a16z/helios", tag = "0.11.0" }
helios-consensus-core = { git = "https://github.com/a16z/helios", tag = "0.11.0" }
helios-ethereum       = { git = "https://github.com/a16z/helios", tag = "0.11.0" }

# General
alloy-sol-types  = "1.5.0"
alloy-primitives = "1.5.0"
alloy            = { version = "1.1.3", features = ["full"] }
tree_hash        = "0.10.0"
serde            = "1.0.228"
serde_cbor       = "0.11.2"
dotenvy          = "0.15.7"
tokio            = "1.48.0"
anyhow           = "1.0.100"
clap             = "4.5.53"
hex              = "0.4.3"

[patch.crates-io] # General
sha2-v0-9-9      = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0" }
sha3-v0-10-8     = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
tiny-keccak      = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
bls12_381        = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-5.0.0-v2" }
ethereum_hashing = { git = "https://github.com/ncitron/ethereum_hashing", rev = "7ee70944ed4fabe301551da8c447e4f4ae5e6c35" }
