[package]
name    = "scripts"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "ethereum-prover"
path = "src/ethereum-prover.rs"

[build-dependencies]
sp1-build = { workspace = true }

[dependencies]
anyhow                = { workspace = true }
alloy-primitives      = { workspace = true }
helios-consensus-core = { workspace = true }
helios-ethereum       = { workspace = true }
tokio                 = { workspace = true }
tree_hash             = { workspace = true }
clap                  = { workspace = true }
serde_cbor            = { workspace = true }
primitives            = { workspace = true }
sp1-sdk               = { workspace = true }
hex                   = { workspace = true }
dotenvy               = { workspace = true }
