[package]
name    = "scripts"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "ethereum-prover"
path = "src/ethereum-prover.rs"

[[bin]]
name = "evm-hyperlane-prover"
path = "src/evm-hyperlane-prover.rs"

[[bin]]
name = "bootstrap"
path = "src/bootstrap.rs"

[build-dependencies]
sp1-build = { workspace = true }

[dependencies]
anyhow                       = { workspace = true }
alloy-primitives             = { workspace = true }
alloy-sol-types              = { workspace = true }
helios-consensus-core        = { workspace = true }
helios-ethereum              = { workspace = true }
tokio                        = { workspace = true }
tree_hash                    = { workspace = true }
clap                         = { workspace = true }
serde_cbor                   = { workspace = true }
primitives                   = { workspace = true }
tracing                      = { workspace = true }
tracing-subscriber           = { workspace = true }
sp1-sdk                      = { workspace = true }
sp1-cc-client-executor       = { workspace = true }
sp1-cc-host-executor         = { workspace = true }
hex                          = { workspace = true }
dotenvy                      = { workspace = true }
url                          = { workspace = true }
