[package]
name    = "prover-service"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dependencies]
tokio                = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic                = { workspace = true }
tonic-prost          = { workspace = true }
prost                = { workspace = true }
primitives           = { workspace = true }
scripts              = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true, features = ["env-filter", "json"] }
dotenvy              = { workspace = true }
sp1-sdk              = { workspace = true }
sp1-cc-host-executor = { workspace = true }
alloy                = { workspace = true }
alloy-primitives     = { workspace = true }
alloy-sol-types      = { workspace = true }
helios-ethereum      = { workspace = true }
serde_cbor           = { workspace = true }
