[package]
version           = "0.1.0"
name              = "evm-hyperlane-merkle-program"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "evm-hyperlane-merkle-program"
path = "src/main.rs"

[dependencies]
sp1-zkvm               = { workspace = true }
serde_cbor             = { workspace = true }
alloy-primitives       = { workspace = true }
alloy-sol-types        = { workspace = true }
sp1-cc-client-executor = { workspace = true }
primitives             = { workspace = true }

[dev-dependencies]
dotenvy              = { workspace = true }
tokio                = { workspace = true, features = ["macros", "rt-multi-thread"] }
sp1-cc-host-executor = { workspace = true }
url                  = { workspace = true }
